Refactor web application into blueprints for better modularity and maintainability. Add admin, auth, exam, forum, and main blueprints. Reset project structure to support new blueprint architecture. Add new functionality for grading service. Update templates and routes to reflect blueprint structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,21 @@ services:
       - db
       - redis
     volumes:
+      # Mount source code for hot reloading
+      - ./web:/app/web
+      - ./celery_worker.py:/app/celery_worker.py
       # Mount questions.txt so updates persist to host
       - ./questions.txt:/app/questions.txt
       # Mount uploads directory for images
       - ./web/static/uploads:/app/web/static/uploads
+    # Enable Gunicorn reload for development
+    command: ["sh", "-c", "python web/wait_for_db.py && gunicorn --worker-class eventlet --reload --bind 0.0.0.0:8080 web.app:app"]
 
   worker:
     build: .
     restart: always
-    command: ["celery", "-A", "celery_worker.celery_app", "worker", "--loglevel=info"]
+    # Use watchmedo (from watchdog) to auto-restart celery on code changes
+    command: ["watchmedo", "auto-restart", "--directory=.", "--pattern=*.py", "--recursive", "--", "celery", "-A", "celery_worker.celery_app", "worker", "--loglevel=info"]
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/grading_system
       - REDIS_HOST=redis
@@ -33,6 +39,9 @@ services:
       - web
     volumes:
       - ./questions.txt:/app/questions.txt
+      # Mount source code to keep worker in sync
+      - ./web:/app/web
+      - ./celery_worker.py:/app/celery_worker.py
 
   redis:
     image: redis:alpine
