Try to add emoji support to the forum feature but failed and decided to remove it. Repair all the files that were changed during the attempt. Now the functionality of the project is back to the state before the attempt.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     build: .
     restart: always
     # Use watchmedo (from watchdog) to auto-restart celery on code changes
-    command: ["watchmedo", "auto-restart", "--directory=.", "--pattern=*.py", "--recursive", "--", "celery", "-A", "celery_worker.celery_app", "worker", "--loglevel=info"]
+    command: ["watchmedo", "auto-restart", "--directory=.", "--pattern=*.py", "--recursive", "--", "celery", "-A", "celery_worker", "worker", "--loglevel=info"]
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/grading_system
       - REDIS_HOST=redis
