--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -4,11 +4,23 @@ Flask-Login
 Flask-WTF
 waitress
 psycopg2
+Flask
+Flask-SQLAlchemy
+psycopg2-binary
+Flask-Login
+Flask-WTF
 redis
-Flask-Session
 celery
-flask-socketio
-eventlet
 gunicorn
-gevent
+eventlet
+requests
+itsdangerous
+werkzeug
+python-dotenv
+Flask-Session
+Flask-Cors
+Flask-SocketIO
+pillow
+Flask-Migrate
 watchdog
+markdown2
