--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,10 @@
+build/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.swp
+*.swo
 .git
 .venv
 __pycache__
@@ -5,7 +12,6 @@ __pycache__
 .vscode
 .idea
 instance
-build
 dist
 .pytest_cache
 *.egg-info
